# ktamaga

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  ktamaga-0.6.lsm
ktamaga/: CMakeLists.txt  Makefile.am  Makefile.in  conf.cpp  conf.h  confData.cpp  confData.h  convert.cpp  ktamaga.cpp  ktamaga.h  ktamaga.kdelnk  ktamaga.xpm  ktamagasched.cpp  ktamagastat.cpp  main.cpp  tamagadefs.h  tamdata.cpp  tamdata.h  tlcd.cpp  tlcd.h
ktamaga/data/: CMakeLists.txt  Makefile.am  Makefile.in  bg1.xpm  icon_attent.xpm  icon_attentact.xpm  icon_attents.xpm  icon_cancel.xpm  icon_dbgdown.xpm  icon_dbgleft.xpm  icon_dbgnext.xpm  icon_dbgprev.xpm  icon_dbgright.xpm  icon_dbgsave.xpm  icon_dbgup.xpm  icon_feed.xpm  icon_feeds.xpm  icon_inject.xpm  icon_light.xpm  icon_meal.xpm  icon_null.xpm  icon_play.xpm  icon_plays.xpm  icon_snack.xpm  icon_status.xpm  icon_teach.xpm  icon_toilet.xpm  icon_turnleft.xpm  icon_turnright.xpm  tama_base.xpm
ktamaga/datapre/: Makefile.am  Makefile.in  README.here
ktamaga/datapre/0/: 1.xpm  2.xpm  3.xpm  Makefile.am  Makefile.in
ktamaga/datapre/1/: 1.xpm  2.xpm  3.xpm  4.xpm  Makefile.in  eat1.xpm  eat2.xpm  happy1.xpm  happy2.xpm  mess1.xpm  mess2.xpm  no1.xpm  no2.xpm  play1.xpm  play2.xpm  sick1.xpm  sick2.xpm  sleep1.xpm  sleep2.xpm  turn1.xpm  turn2.xpm  unhappy1.xpm  unhappy2.xpm  unhappy3.xpm  unhappy4.xpm  unhappy5.xpm  unhappy6.xpm
ktamaga/datapre/10/: 1.xpm  2.xpm  3.xpm  4.xpm  Makefile.in  eat1.xpm  eat2.xpm  happy1.xpm  happy2.xpm  mess1.xpm  mess2.xpm  no1.xpm  no2.xpm  play1.xpm  play2.xpm  sick1.xpm  sick2.xpm  sleep1.xpm  sleep2.xpm  turn1.xpm  turn2.xpm  unhappy1.xpm  unhappy2.xpm  unhappy3.xpm  unhappy4.xpm  unhappy5.xpm  unhappy6.xpm
ktamaga/datapre/11/: 1.xpm  2.xpm  3.xpm  4.xpm  Makefile.in  eat1.xpm  eat2.xpm  happy1.xpm  happy2.xpm  mess1.xpm  mess2.xpm  no1.xpm  no2.xpm  play1.xpm  play2.xpm  sick1.xpm  sick2.xpm  sleep1.xpm  sleep2.xpm  turn1.xpm  turn2.xpm  unhappy1.xpm  unhappy2.xpm  unhappy3.xpm  unhappy4.xpm  unhappy5.xpm  unhappy6.xpm
ktamaga/datapre/2/: 1.xpm  2.xpm  3.xpm  4.xpm  Makefile.in  eat1.xpm  eat2.xpm  happy1.xpm  happy2.xpm  mess1.xpm  mess2.xpm  no1.xpm  no2.xpm  play1.xpm  play2.xpm  sick1.xpm  sick2.xpm  sleep1.xpm  sleep2.xpm  turn1.xpm  turn2.xpm  unhappy1.xpm  unhappy2.xpm  unhappy3.xpm  unhappy4.xpm  unhappy5.xpm  unhappy6.xpm
ktamaga/datapre/3/: 1.xpm  2.xpm  3.xpm  4.xpm  Makefile.in  eat1.xpm  eat2.xpm  happy1.xpm  happy2.xpm  mess1.xpm  mess2.xpm  no1.xpm  no2.xpm  play1.xpm  play2.xpm  sick1.xpm  sick2.xpm  sleep1.xpm  sleep2.xpm  turn1.xpm  turn2.xpm  unhappy1.xpm  unhappy2.xpm  unhappy3.xpm  unhappy4.xpm  unhappy5.xpm  unhappy6.xpm
ktamaga/datapre/4/: 1.xpm  2.xpm  3.xpm  4.xpm  Makefile.in  eat1.xpm  eat2.xpm  happy1.xpm  happy2.xpm  mess1.xpm  mess2.xpm  no1.xpm  no2.xpm  play1.xpm  play2.xpm  sick1.xpm  sick2.xpm  sleep1.xpm  sleep2.xpm  turn1.xpm  turn2.xpm  unhappy1.xpm  unhappy2.xpm  unhappy3.xpm  unhappy4.xpm  unhappy5.xpm  unhappy6.xpm
ktamaga/datapre/5/: 1.xpm  2.xpm  3.xpm  4.xpm  Makefile.in  eat1.xpm  eat2.xpm  happy1.xpm  happy2.xpm  mess1.xpm  mess2.xpm  no1.xpm  no2.xpm  play1.xpm  play2.xpm  sick1.xpm  sick2.xpm  sleep1.xpm  sleep2.xpm  turn1.xpm  turn2.xpm  unhappy1.xpm  unhappy2.xpm  unhappy3.xpm  unhappy4.xpm  unhappy5.xpm  unhappy6.xpm
ktamaga/datapre/6/: 1.xpm  2.xpm  3.xpm  4.xpm  Makefile.in  eat1.xpm  eat2.xpm  happy1.xpm  happy2.xpm  mess1.xpm  mess2.xpm  no1.xpm  no2.xpm  play1.xpm  play2.xpm  sick1.xpm  sick2.xpm  sleep1.xpm  sleep2.xpm  turn1.xpm  turn2.xpm  unhappy1.xpm  unhappy2.xpm  unhappy3.xpm  unhappy4.xpm  unhappy5.xpm  unhappy6.xpm
ktamaga/datapre/7/: 1.xpm  2.xpm  3.xpm  4.xpm  Makefile.in  eat1.xpm  eat2.xpm  happy1.xpm  happy2.xpm  mess1.xpm  mess2.xpm  no1.xpm  no2.xpm  play1.xpm  play2.xpm  sick1.xpm  sick2.xpm  sleep1.xpm  sleep2.xpm  turn1.xpm  turn2.xpm  unhappy1.xpm  unhappy2.xpm  unhappy3.xpm  unhappy4.xpm  unhappy5.xpm  unhappy6.xpm
ktamaga/datapre/8/: 1.xpm  2.xpm  3.xpm  4.xpm  Makefile.in  eat1.xpm  eat2.xpm  happy1.xpm  happy2.xpm  mess1.xpm  mess2.xpm  no1.xpm  no2.xpm  play1.xpm  play2.xpm  sick1.xpm  sick2.xpm  sleep1.xpm  sleep2.xpm  turn1.xpm  turn2.xpm  unhappy1.xpm  unhappy2.xpm  unhappy3.xpm  unhappy4.xpm  unhappy5.xpm  unhappy6.xpm
ktamaga/datapre/9/: 1.xpm  2.xpm  3.xpm  4.xpm  Makefile.am  Makefile.in  eat1.xpm  eat2.xpm  happy1.xpm  happy2.xpm  mess1.xpm  mess2.xpm  no1.xpm  no2.xpm  play1.xpm  play2.xpm  sick1.xpm  sick2.xpm  sleep1.xpm  sleep2.xpm  turn1.xpm  turn2.xpm  unhappy1.xpm  unhappy2.xpm  unhappy3.xpm  unhappy4.xpm  unhappy5.xpm  unhappy6.xpm
ktamaga/datapre/other/: Makefile.am  Makefile.in  agewgt.xpm  am.xpm  b0.xpm  b1.xpm  b2.xpm  b3.xpm  b4.xpm  b5.xpm  b6.xpm  b7.xpm  b8.xpm  b9.xpm  change1.xpm  change2.xpm  change3.xpm  change4.xpm  change5.xpm  change6.xpm  change7.xpm  change8.xpm  clean.xpm  dark0.xpm  dark1.xpm  dark2.xpm  discip.xpm  discip_a.xpm  gamepre.xpm  gameres.xpm  gohome1.xpm  gohome2.xpm  happy.xpm  heart1.xpm  heart2.xpm  hungry.xpm  leftarr.xpm  meal1.xpm  meal2.xpm  meal3.xpm  (+25 more)
ktamaga/doc/: Makefile.in
ktamaga/doc/en/: Makefile.am  Makefile.in  configure.html  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index.html
po/: Makefile.am  Makefile.in  de.gmo  de.po
