install(FILES
    data/phase_0.dat
    data/phase_1.dat
    data/phase_2.dat
    data/phase_3.dat
    data/phase_4.dat
    data/phase_5.dat
    data/phase_6.dat
    data/phase_7.dat
    data/phase_8.dat
    data/phase_9.dat
    data/phase_10.dat
    data/phase_11.dat
    data/phase_other.dat

    data/position_0.dat
    data/position_1.dat
    data/position_2.dat
    data/position_3.dat
    data/position_4.dat
    data/position_5.dat
    data/position_6.dat
    data/position_7.dat
    data/position_8.dat
    data/position_9.dat
    data/position_10.dat
    data/position_11.dat

    DESTINATION ${KDE1_DATADIR}/ktamaga/
)

install(FILES
    data/tama_base.xpm
    data/bg1.xpm

    data/icon_attentact.xpm
    data/icon_attents.xpm
    data/icon_attent.xpm
    data/icon_base.xpm
    data/icon_cancel.xpm
    data/icon_dbgdown.xpm
    data/icon_dbgleft.xpm
    data/icon_dbgnext.xpm
    data/icon_dbgprev.xpm
    data/icon_dbgright.xpm
    data/icon_dbgsave.xpm
    data/icon_dbgup.xpm
    data/icon_feeds.xpm
    data/icon_feed.xpm
    data/icon_inject.xpm
    data/icon_light.xpm
    data/icon_meal.xpm
    data/icon_null.xpm
    data/icon_plays.xpm
    data/icon_play.xpm
    data/icon_snack.xpm
    data/icon_status.xpm
    data/icon_teach.xpm
    data/icon_toilet.xpm
    data/icon_turnleft.xpm
    data/icon_turnright.xpm

    DESTINATION ${KDE1_DATADIR}/ktamaga/
)

