install(FILES
    phase_0.dat
    phase_1.dat
    phase_2.dat
    phase_3.dat
    phase_4.dat
    phase_5.dat
    phase_6.dat
    phase_7.dat
    phase_8.dat
    phase_9.dat
    phase_10.dat
    phase_11.dat
    phase_other.dat

    position_0.dat
    position_1.dat
    position_2.dat
    position_3.dat
    position_4.dat
    position_5.dat
    position_6.dat
    position_7.dat
    position_8.dat
    position_9.dat
    position_10.dat
    position_11.dat

    DESTINATION ${KDE1_DATADIR}/ktamaga/
)

install(FILES
    tama_base.xpm
    bg1.xpm

    icon_attentact.xpm
    icon_attents.xpm
    icon_attent.xpm
    icon_base.xpm
    icon_cancel.xpm
    icon_dbgdown.xpm
    icon_dbgleft.xpm
    icon_dbgnext.xpm
    icon_dbgprev.xpm
    icon_dbgright.xpm
    icon_dbgsave.xpm
    icon_dbgup.xpm
    icon_feeds.xpm
    icon_feed.xpm
    icon_inject.xpm
    icon_light.xpm
    icon_meal.xpm
    icon_null.xpm
    icon_plays.xpm
    icon_play.xpm
    icon_snack.xpm
    icon_status.xpm
    icon_teach.xpm
    icon_toilet.xpm
    icon_turnleft.xpm
    icon_turnright.xpm

    DESTINATION ${KDE1_DATADIR}/ktamaga/
)

