EXTRA_DIST = icon_feed.xpm phase_0.dat position_1.dat bg1.xpm icon_feeds.xpm \
            phase_1.dat position_10.dat icon_attent.xpm icon_inject.xpm \
            phase_10.dat position_11.dat icon_attentact.xpm icon_light.xpm \
            phase_11.dat position_2.dat icon_attents.xpm icon_meal.xpm \
            phase_2.dat position_3.dat icon_base.xpm       icon_null.xpm       phase_3.dat      position_4.dat icon_cancel.xpm     icon_play.xpm       phase_4.dat      position_5.dat icon_dbgdown.xpm    icon_plays.xpm      phase_5.dat      position_6.dat icon_dbgleft.xpm    icon_snack.xpm      phase_6.dat      position_7.dat icon_dbgnext.xpm    icon_status.xpm     phase_7.dat      position_8.dat icon_dbgprev.xpm    icon_teach.xpm      phase_8.dat      position_9.dat icon_dbgright.xpm   icon_toilet.xpm     phase_9.dat      tama_base.xpm icon_dbgsave.xpm    icon_turnleft.xpm   phase_other.dat icon_dbgup.xpm      icon_turnright.xpm  position_0.dat
