EXTRA_DIST = agewgt.xpm  b9.xpm       dark1.xpm     hungry.xpm    s0.xpm     snack1.xpm am.xpm      change1.xpm  dark2.xpm     leftarr.xpm   s1.xpm     snack2.xpm b0.xpm      change2.xpm  discip.xpm    meal1.xpm     s2.xpm     snack3.xpm b1.xpm      change3.xpm  discip_a.xpm  meal2.xpm     s3.xpm     snack4.xpm b2.xpm      change4.xpm  gamepre.xpm   meal3.xpm     s4.xpm     tmwalk1.xpm b3.xpm      change5.xpm  gameres.xpm   meal4.xpm     s5.xpm     tmwalk2.xpm b4.xpm      change6.xpm  gohome1.xpm   mess1.xpm     s6.xpm     z1.xpm b5.xpm      change7.xpm  gohome2.xpm   mess2.xpm     s7.xpm     z2.xpm b6.xpm      change8.xpm  happy.xpm     null.xpm      s8.xpm b7.xpm      clean.xpm    heart1.xpm    pm.xpm        s9.xpm b8.xpm      dark0.xpm    heart2.xpm    rightarr.xpm  skull.xpm

