# Add all your files here
data_DATA = configure.html index-1.html index-2.html index-3.html index-4.html index-5.html index.html alltamag.png iattent.png ieat.png ienject.png ilight.png interface1.png iplay.png istatus.png iteach.png itoile.png tchart.png
EXTRA_DIST = configure.html index-1.html index-2.html index-3.html index-4.html index-5.html index.html alltamag.png iattent.png ieat.png ienject.png ilight.png interface1.png iplay.png istatus.png iteach.png itoile.png tchart.png
# This is where it will all be installed
datadir = $(kde_htmldir)/en/ktamaga
